--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 watchdog==0.8.3
 PyYAML==3.11
 argh==0.26.1
@@ -5,3 +6,17 @@ pathtools==0.1.2
 
 pytest==2.7.0
 py==1.4.26
+
+WebTest==2.0.18
+WSGIProxy2==0.4.2
+WebOb==1.4
+beautifulsoup4==4.3.2
+six==1.9.0
+waitress==0.8.9
+
+pytest-cov==1.8.1
+cov-core==1.15.0
+coverage==3.7.1
+
+tox==1.9.2
+virtualenv==12.1.1
