run flake8 on the codebase

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,11 @@ envlist =
 
 [testenv]
 commands =
+    flake8 setup.py wsgiwatcher
     pip install wsgiwatcher[testing]
     py.test
+deps =
+    flake8
 
 [testenv:cover]
 basepython =
