--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,17 @@
 [tox]
 envlist =
-    py26,py27,pypy,py32,py33,py34,pypy3,cover,docs
+    flake8,py27,pypy,py32,py33,py34,pypy3,cover,docs
 
 [testenv]
 commands =
-    flake8 setup.py wsgiwatcher
     pip install wsgiwatcher[testing]
     py.test
+
+[testenv:flake8]
+basepython =
+    python3.4
+commands =
+    flake8 setup.py wsgiwatcher
 deps =
     flake8
 
