Remove coverage for now.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    flake8,py27,pypy,py32,py33,py34,pypy3,cover,docs
+    flake8,py27,pypy,py32,py33,py34,pypy3,docs
 
 [testenv]
 commands =
@@ -14,13 +14,6 @@ commands =
     flake8 setup.py wsgiwatcher
 deps =
     flake8
-
-[testenv:cover]
-basepython =
-    python3.4
-commands =
-    pip install wsgiwatcher[testing]
-    py.test --cov wsgiwatcher
 
 [testenv:docs]
 basepython =
