Support passing args to py.test when running tox.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist =
 [testenv]
 commands =
     pip install wsgiwatcher[testing]
-    py.test
+    py.test {posargs}
 
 [testenv:flake8]
 basepython =
