--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,12 @@ envlist =
     flake8,py27,pypy,py32,py33,py34,pypy3,docs
 
 [testenv]
-commands =
-    pip install wsgiwatcher[testing]
-    py.test {posargs}
+deps =
+    pytest
+    WebTest
+    WSGIProxy2
+    coverage
+commands = py.test {posargs}
 
 [testenv:flake8]
 basepython =
@@ -18,6 +21,6 @@ deps =
 [testenv:docs]
 basepython =
     python2.7
+deps = Sphinx
 commands =
-    pip install wsgiwatcher[docs]
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
